Fix topic title and icon spacing regression

--- a/modules/new/styles/interactive.less
+++ b/modules/new/styles/interactive.less
@@ -191,13 +191,9 @@ div.flow-menu-inverted {
 		padding-bottom: 0;
 
 		// Needs additional specificity to override `div#content h2`
-		div#bodyContent {
-			& h2.flow-topic-title {
-				margin-bottom: 0;
-			}
-			& h2.flow-moderated-topic-title {
-				margin-bottom: 0;
-			}
+		div#bodyContent & h2.flow-topic-title,
+		div#bodyContent & h2.flow-moderated-topic-title {
+			margin-bottom: 0;
 		}
 
 		.flow-topic-titlebar {
@@ -294,7 +290,7 @@ div.flow-menu-inverted {
 	vertical-align: text-bottom;
 	height: .7em;
 	font-size: 1.6em;
-	line-height: .8em;
+	line-height: .7em;
 }
 
 
